# amazon-books

./: .gitignore  AMD_exam.ipynb  README.md  notebook_colab.ipynb  pyproject.toml
data/: duplicated_titles.txt
src/: notebook.ipynb  utils.py
