[tool.poetry]
name = "amazon-books"
version = "0.1.0"
description = "Project for the exam of Algorithms for Massive Data - UniMi"
authors = ["lucasangio01 <luca.sangiovanni.2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.1"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scikit-learn = "^1.7.0"
pyspark = "3.5.0"
jupyter = "^1.1.1"
findspark = "^2.0.1"
sparknlp = "^1.0.0"
spark-nlp = "^6.0.3"
umap = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
